# Noise-suppression-system

./: .gitignore
ai/: README.md  data.lnk
ai/docs/: rnnoise-preprocessing-and-model.md  rnnoise-pytorch-architecture.md
ai/docs/context/: PROJECT_AUDIT.md  README.md  dataset-guide.md  rnnoise-pytorch-complete.md
ai/docs/report/: how-to-train-rnnoise.md
ai/notebooks/: RNNoise.ipynb  RNNoise_Training.ipynb
ai/references/nam/: .gitignore  README.md  Train_stft_ver_2.ipynb  fft_data_20250528_104815.csv  model.py  processdata.py  read_data.py  read_serial_monitor.py  requirements.txt  server.py  spectrogarm_arduino.txt  spectrogram_2hz.npy  spectrogram_data.npy  tensorflow_spectrogram.py  ui.py
ai/references/nam/arduino_code/: Test_esp32s3.ino  Test_istft.ino  Test_istft_stft.ino  Test_stft.ino  app.ino  apptest.ino  denoi.h  denoi_32.h  speech_enhancement.ino
ai/references/nam/ui/: index.html  package.json
ai/references/nam/ui/public/: eel.js
ai/references/nam/ui/src/: App.vue  main.js  style.css
ai/references/nam/ui/src/components/: AudioVisualizer.vue  TestAudio.vue
ai/references/nam/ui/src/composables/: useNavigation.js
ai/references/nam/ui/src/layouts/: main.vue
ai/references/nam/ui/src/pages/: console.vue  main.vue
ai/references/nam/ui/src/types/: index.ts
ai/rnnoise-pytorch/: README.md  REPORT_TEMPLATE.md  requirements.txt
ai/rnnoise-pytorch/configs/: default.yaml
ai/rnnoise-pytorch/examples/: basic_training.py
ai/rnnoise-pytorch/rnnoise/: __init__.py  dataset.py  loss.py
ai/rnnoise-pytorch/scripts/: README.md  dataset_info.py  evaluate.py  export_to_c.py  plot_training.py  train.py
ai/scripts/: README_LOGGER.md  training_logger.py
docs/: Báo_cáo_Kỹ_thuật_RNNoise_ESP32.md  ESP32S3_PIE_SIMD_Knowledge_Base.md
docs/context/: rnnoise-inference-flow.md
firmware/docs/: ESP32_AUDIO_STREAMING.md  RTOS requirement (Ntl + Kha).md
firmware/esp32-rnnoise/: CMakeLists.txt  build_output.txt  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32-s3-supermini
firmware/esp32-rnnoise/components/rnnoise/: CMakeLists.txt  arch.h  celt_lpc.h  denoise.c  idf_component.yml  kiss_fft.c  nnet.c  nnet.h  nnet_arch.h  nnet_default.c  os_support.h  pitch.c  pitch_opt_pie.c  pitch_opt_pie.h  pitch_opt_pie_asm.S  rnn.c  rnnoise_tables.c  vec.h
firmware/esp32-rnnoise/src/: main.cpp
firmware/esp32-rnnoise/src/constants/: i2s_config_t.h
scripts/: patch_rnnoise.py  udp_player.py  udp_viz.py
scripts/tests/: verify_audio_udp.py
